# racecar_outdoor_ros_competition2022

./: .gitmodules  README.md
src/racing_driver/: CMakeLists.txt  package.xml
src/racing_driver/src/: racing_racecar.cpp
src/sztu_mapping/: CMakeLists.txt  package.xml
src/sztu_mapping/launch/: main_sztu_mapping.launch  slam_sztu_mapping.launch
src/sztu_mapping/src/: sztu_mapping.cpp
src/sztu_racecar/: CMakeLists.txt  package.xml
src/sztu_racecar/launch/: Run_car.launch  Run_gmapping.launch  car.launch  ls01b_v2.launch  ls01g_lidar.launch  rviz.launch  sztu_main.launch  wheelodom_gmapping.launch  wheelodom_nav.launch
src/sztu_racecar/launch/includes/: amcl.launch.xml  rf2o.launch.xml  sztu_car_tf.launch.xml
src/sztu_racecar/param/: ekf_wheelodom_params.yaml  sztu_params.yaml
src/sztu_racecar/sensor/serial_imu/src/: serial_imu.cpp  sub_0x62.cpp  sub_0x91.cpp
src/sztu_racecar/sensor/wheel_odom/: CMakeLists.txt  package.xml
src/sztu_racecar/sensor/wheel_odom/launch/: wheel_odom.launch
src/sztu_racecar/sensor/wheel_odom/src/: wheel_odom_pub.cpp
src/sztu_racecar/src/: PID.h  path_recording.cpp  pure_pursuit.cpp  racecar_teleop.py
src/sztu_racecar/udev/: art_init.sh  car.rules  imu.rules  wheel_odom.rules
src/sztu_vision/: CMakeLists.txt  package.xml
src/sztu_vision/src/: getHSV.cpp  vision.cpp
